--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^3.6.4",
     "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
