--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "daisyui": "^3.6.4",
     "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
+    "i18next": "^23.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
     "react-router-dom": "^6.15.0",
