[ADD] front form

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "daisyui": "^3.6.4",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
     "i18next": "^23.5.1",
