--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next": "^23.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
