--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
     "i18next": "^23.5.1",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
@@ -24,6 +25,7 @@
     "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.2"
