--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
     "react-modal": "^3.16.1",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.2"
