--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
-    "react-spring": "^9.7.2"
+    "react-spring": "^9.7.2",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
