update page dev and designer

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
+    "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.15.0",
