--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.2",
+    "react-toggle-dark-mode": "^1.1.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
