--- a/package.json
+++ b/package.json
@@ -15,24 +15,14 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.1",
-    "gsap": "^3.12.2",
-    "i18next": "^23.5.1",
-    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
-    "react-image-lightbox": "^5.1.4",
-    "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.15.0",
-    "react-scroll": "^1.8.9",
-    "react-spring": "^9.7.2",
-    "react-toggle-dark-mode": "^1.1.1",
-    "swiper": "^11.0.5"
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
